--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,31 @@
+amqp==5.1.1
+anyio==3.6.2
+async-timeout==4.0.2
 beautifulsoup4==4.12.2
+billiard==3.6.4.0
+celery==5.2.7
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 fastapi==0.95.1
+h11==0.14.0
+idna==3.4
+kombu==5.2.4
+prompt-toolkit==3.0.38
 pydantic==1.10.7
-Requests==2.29.0
+pytz==2023.3
+redis==4.5.4
+requests==2.29.0
 schedule==1.2.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
+starlette==0.26.1
+typing_extensions==4.5.0
+urllib3==1.26.15
 uvicorn==0.22.0
+vine==5.0.0
+wcwidth==0.2.6
