--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,17 @@
 version: '3.8'
 services:
   redis:
+    build: .
     image: redis:latest
     ports:
       - "6379:6379"
 
   redis-commander:
+    build: .
     image: rediscommander/redis-commander:latest
     environment:
       - REDIS_HOSTS=local:redis:6379
     ports:
-      - "8081:8081"
+      - "8001:8001"
     depends_on:
       - redis
-
-  fastapi-app:
-    build:
-      context: .
-      dockerfile: Dockerfile.fastapi
-    volumes:
-      - ./:/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - redis
-    command: [ "/usr/bin/supervisord" ]
