--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,6 +7,8 @@ directory=/app
 autostart=true
 autorestart=true
 startretries=3
+stdout_logfile=/var/log/celery.log
+stderr_logfile=/var/log/celery_error.log
 
 [program:fastapi]
 command=python3 /app/fast.py
@@ -14,3 +16,5 @@ directory=/app
 autostart=true
 autorestart=true
 startretries=3
+stdout_logfile=/var/log/fastapi.log
+stderr_logfile=/var/log/fastapi_error.log
